--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[build-dependencies]
+cfgrammar = "0.12"
+lrlex = "0.12"
+lrpar = "0.12"
+
 [dependencies]
+cfgrammar = "0.12"
+lrlex = "0.12"
+lrpar = "0.12"
